troubleshoot layout issue

--- a/css/styles-slider2.css
+++ b/css/styles-slider2.css
@@ -38,10 +38,8 @@ body {
       list-style: none; 
       border: 1px solid red;
       display: flex;
-      flex: 2;   
-      padding: 10px; 
-     
-    }
+      flex: 2; 
+     }
 .slider-nav .arrow { flex: 1; }
 
 .slider-nav a {
